--- a/process-mining-web/src/main/resources/templates/home.html
+++ b/process-mining-web/src/main/resources/templates/home.html
@@ -37,9 +37,21 @@
 			</div>
 			
 		</div>
+		
+		<div class="modal fade" role="dialog" id="myModal" >
+		  <div class="modal-dialog" role="document">
+		    <div class="modal-content">
+		      <div class="modal-body" style="padding: 35px;">
+				<img th:src="@{/img/home/adjusting-data.gif}" style="float:left"/> 
+				<h1 style="text-align:center;margin: 0;padding: 28px 0px;font-size: 32px;">Adjusting and validating your file.</h1>
+		      </div>
+		      
+		    </div><!-- /.modal-content -->
+		  </div><!-- /.modal-dialog -->
+		</div><!-- /.modal -->
 	
 		<script th:src="@{/js/jquery-1.10.2.min.js}"></script>
-		<script th:src="@{/js/d3.v3.min.js}"></script>
+		<script th:src="@{/js/bootstrap.min.js}"></script>
 		<script th:src="@{/js/home/dropzone.js}"></script>
 		<script th:src="@{/js/home/home.js}"></script>
 	
