--- a/process-mining-web/src/main/webapp/resources/css/dropzone.css
+++ b/process-mining-web/src/main/webapp/resources/css/dropzone.css
@@ -33,23 +33,23 @@
 .dropzone.dz-drag-hover .dz-message { opacity: 0.5; }
 .dropzone .dz-message { text-align: center; margin: 0em 0; }
 .dropzone .dz-message .dz-sub-message{ display:block; font-size: 13px;}
-.dropzone .dz-preview { position: relative; display: inline-block; vertical-align: top; margin: 16px; min-height: 100px;    width: 400px;}
+.dropzone .dz-preview { position: relative; display: inline-block; vertical-align: top; margin: 16px; min-height: 50px;    width: 451px; margin-left: 9px;}
 .dropzone .dz-preview:hover { z-index: 1000; }
 .dropzone .dz-preview:hover .dz-details { opacity: 1; }
-.dropzone .dz-preview.dz-file-preview .dz-image { border-radius: 20px; background: #ddd; float: left; }
+.dropzone .dz-preview.dz-file-preview .dz-image { border-radius: 20px; background: #ddd; float: left; display:none}
 .dropzone .dz-preview.dz-file-preview .dz-details { opacity: 1; }
 .dropzone .dz-preview.dz-image-preview { background: white;  }
 .dropzone .dz-preview.dz-image-preview .dz-details { -webkit-transition: opacity 0.2s linear; -moz-transition: opacity 0.2s linear; -ms-transition: opacity 0.2s linear; -o-transition: opacity 0.2s linear; transition: opacity 0.2s linear; }
 .dropzone .dz-preview .dz-remove { font-size: 14px; text-align: center; display: block; cursor: pointer; border: none; }
 .dropzone .dz-preview .dz-remove:hover { text-decoration: underline; }
 .dropzone .dz-preview:hover .dz-details { opacity: 1; }
-.dropzone .dz-preview .dz-details { z-index: 20; position: relative; width:280px;  border: 1px solid #ddd; top: 5px; left: -6px; opacity: 0; font-size: 13px; padding: 2em 1em; text-align: left; color: rgba(0, 0, 0, 0.9); line-height: 150%;  float: left; }
-.dropzone .dz-preview .dz-details .dz-size {   margin-bottom: 16px; font-size: 21px; }
+.dropzone .dz-preview .dz-details { z-index: 20; position: relative; width: 100%;  border: 0px solid #ddd; font-size: 13px; text-align: left; color: rgba(0, 0, 0, 0.9); line-height: 120%;  float: left; }
+.dropzone .dz-preview .dz-details .dz-size {   margin-bottom: 16px; font-size: 21px;    float: right;}
 .dropzone .dz-preview .dz-details .dz-filename { white-space: nowrap; }
 .dropzone .dz-preview .dz-details .dz-filename:hover span { border: 1px solid rgba(200, 200, 200, 0.8); background-color: rgba(255, 255, 255, 0.8); }
-.dropzone .dz-preview .dz-details .dz-filename:not(:hover) { overflow: hidden; text-overflow: ellipsis; }
+.dropzone .dz-preview .dz-details .dz-filename:not(:hover) { overflow: hidden; text-overflow: ellipsis; font-size: 20px; line-height: 20px;}
 .dropzone .dz-preview .dz-details .dz-filename:not(:hover) span { border: 1px solid transparent; }
-.dropzone .dz-preview .dz-details .dz-filename span, .dropzone .dz-preview .dz-details .dz-size span { background-color: rgba(255, 255, 255, 0.4); padding: 0 0.4em; border-radius: 3px; }
+.dropzone .dz-preview .dz-details .dz-filename span, .dropzone .dz-preview .dz-details .dz-size span { /* background-color: rgba(255, 255, 255, 0.4); */ padding: 0 0.4em; border-radius: 3px;}
 .dropzone .dz-preview:hover .dz-image img { -webkit-transform: scale(1.05, 1.05); -moz-transform: scale(1.05, 1.05); -ms-transform: scale(1.05, 1.05); -o-transform: scale(1.05, 1.05); transform: scale(1.05, 1.05); -webkit-filter: blur(8px); filter: blur(8px); }
 .dropzone .dz-preview .dz-image { border-radius: 20px; overflow: hidden; width: 120px; height: 120px; position: relative;  float: left; display: block;  }
 .dropzone .dz-preview .dz-image img { display: block; }
@@ -60,8 +60,8 @@
 .dropzone .dz-preview.dz-processing .dz-progress { opacity: 1; -webkit-transition: all 0.2s linear; -moz-transition: all 0.2s linear; -ms-transition: all 0.2s linear; -o-transition: all 0.2s linear; transition: all 0.2s linear; }
 .dropzone .dz-preview.dz-complete .dz-progress { opacity: 0; -webkit-transition: opacity 0.4s ease-in; -moz-transition: opacity 0.4s ease-in; -ms-transition: opacity 0.4s ease-in; -o-transition: opacity 0.4s ease-in; transition: opacity 0.4s ease-in; }
 .dropzone .dz-preview:not(.dz-processing) .dz-progress { -webkit-animation: pulse 6s ease infinite; -moz-animation: pulse 6s ease infinite; -ms-animation: pulse 6s ease infinite; -o-animation: pulse 6s ease infinite; animation: pulse 6s ease infinite; }
-.dropzone .dz-preview .dz-progress { opacity: 1; z-index: 1000; pointer-events: none; position: absolute; height: 16px; left: 50%; top: 50%; margin-top: -8px; width: 80px; margin-left: -40px; background: rgba(255, 255, 255, 0.9); -webkit-transform: scale(1); border-radius: 8px; overflow: hidden; }
-.dropzone .dz-preview .dz-progress .dz-upload { background: #333; background: linear-gradient(to bottom, #666, #444); position: absolute; top: 0; left: 0; bottom: 0; width: 0; -webkit-transition: width 300ms ease-in-out; -moz-transition: width 300ms ease-in-out; -ms-transition: width 300ms ease-in-out; -o-transition: width 300ms ease-in-out; transition: width 300ms ease-in-out; }
+.dropzone .dz-preview .dz-progress { border-radius: 4px;      border: 1px solid #D3D3D3;      box-shadow: inset 0 1px 1px #F0F0F0,0 3px 6px -5px #BBB; pointer-events: none; position: relative; height: 22px; width: 100%; -webkit-transform: scale(1); overflow: hidden; background: #FAFAFA;}
+.dropzone .dz-preview .dz-progress .dz-upload { background: #3FB8AF; position: absolute; box-shadow: inset 0px 0px 3px #6F6D6D,0 3px 6px -5px #BBB; top: 0; left: 0; bottom: 0; width: 0; -webkit-transition: width 300ms ease-in-out; -moz-transition: width 300ms ease-in-out; -ms-transition: width 300ms ease-in-out; -o-transition: width 300ms ease-in-out; transition: width 300ms ease-in-out; }
 .dropzone .dz-preview.dz-error .dz-error-message { display: block; }
 .dropzone .dz-preview.dz-error:hover .dz-error-message { opacity: 1; pointer-events: auto; }
 .dropzone .dz-preview .dz-error-message { pointer-events: none; z-index: 1000; position: absolute; display: block; display: none; opacity: 0; -webkit-transition: opacity 0.3s ease; -moz-transition: opacity 0.3s ease; -ms-transition: opacity 0.3s ease; -o-transition: opacity 0.3s ease; transition: opacity 0.3s ease; border-radius: 8px; font-size: 13px; top: 130px; left: -10px; width: 140px; background: #be2626; background: linear-gradient(to bottom, #be2626, #a92222); padding: 0.5em 1.2em; color: white; }
