Adicionado titulo da analise, ultimas análises, cores da lentidao dos arcos

--- a/process-mining-web/src/main/resources/templates/adjust.html
+++ b/process-mining-web/src/main/resources/templates/adjust.html
@@ -32,6 +32,24 @@
 
 	</div>
 	<div id="adjust-container"> 
+	<div style="
+    border-bottom: 1px solid #999;
+    position: relative;
+    background-color: white;
+">
+  
+  <input type="text" id="analysis-name" style="
+    width: 100%;
+    display: block;
+    border: 0px none;
+    font-size: 22px;
+    padding: 5px 11px;
+    box-sizing: inherit;
+    clear: both;
+    color: #666;
+    font-style: italic;
+" placeholder="Analysis title" th:value="${filename}" />
+</div>
 	</div>
 
 	<script th:src="@{/js/jquery-1.10.2.min.js}"></script>
