--- a/process-mining-web/src/main/resources/templates/home.html
+++ b/process-mining-web/src/main/resources/templates/home.html
@@ -14,7 +14,7 @@
 	<body>
 		<span th:include="commun/header :: process-menu (isHome=true)"></span>
 	
-		<div class="container">
+		<div class="container" id="container-main">
 			<div class="jumbotron">
 				<h2>Ja imaginou minerar dados e produzir processos pela web?</h2>
 				<ul>
