--- a/process-mining-web/src/main/resources/templates/process/visualization.html
+++ b/process-mining-web/src/main/resources/templates/process/visualization.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" th:href="@{/css/jquery.nouislider.min.css}"/>
         <link rel="stylesheet" th:href="@{/css/svg.css}"/>
         <link rel="stylesheet" th:href="@{/css/process/visualization.css}"/>
-		<link rel="stylesheet" th:href="@{/css/process/xtrace.css}" type="text/css"/>
+		<link rel="stylesheet" th:href="@{/css/process/graph.css}" type="text/css"/>
 		<link rel="stylesheet" th:href="@{/css/process/tipsy.css}" type="text/css"/>
 		
 		<style type="text/css">
@@ -62,10 +62,21 @@
 				
 				<div class="tab-content">
 					<div role="tabpanel" class="tab-pane fade in active" id="densityControl">
-						<h2>Density</h2>
-						<div class="">
-							<div class="sliders" id="densitySlider"></div>
-							<div class="sliders" id="activitySlider"></div>
+						<h2>Info</h2>
+						<div class="subtitle">
+							<label>Border Events:</label>
+							<ul>
+								<li><div class="sub-start"></div> <span>Process Start</span></li>
+								<li><div class="sub-end"></div> <span>Process End</span></li>
+			
+							</ul>
+							<label>Activities :</label>
+							<ul>
+								<li><div class="sub-actvity"></div> <span>Default</span></li>
+								<li><div class="sub-actvity sub-selected"></div> <span>Selected</span></li>
+								<li style="width: 68px;"><div class="sub-actvity sub-next"></div> <span>Next</span></li>
+								<li><div class="sub-actvity sub-previous"></div> <span>Previous</span></li>
+							</ul>
 						</div>
 					</div>
 					<div role="tabpanel" class="tab-pane fade" id="activitiesControl">	
@@ -96,7 +107,13 @@
 						  	</button>
 						</div>
 						<div class="content">
-							
+							<ul>
+								<li>Current displaying: <span id="ani-control-display">0</span></li>
+								<li>Waiting : <span id="ani-control-waiting">0</span></li>
+								<li>Done: <span id="ani-control-done">0</span></li>
+								<li>&nbsp;</li>
+								<li>Total: <span id="ani-control-total">0</span></li>
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -106,24 +123,11 @@
 				</div>     	
             
             </div>
+            
             <div id="graph-container">
-				<div class="subtitle">
-					<label>Border Events:</label>
-					<ul>
-						<li><div class="sub-start"></div> <span>Process Start</span></li>
-						<li><div class="sub-end"></div> <span>Process End</span></li>
-	
-					</ul>
-					<div class="sub-divisor"></div>
-					<label>Activities</label>
-					<ul>
-						<li><div class="sub-actvity"></div> <span>Default</span></li>
-						<li><div class="sub-actvity sub-selected"></div> <span>Selected</span></li>
-						<li><div class="sub-actvity sub-next"></div> <span>Next</span></li>
-						<li><div class="sub-actvity sub-previous"></div> <span>Previous</span></li>
-					</ul>
-				</div>
+				
 				<div id="graph"></div>
+				
 	         </div>
 	         <div id="tooltip-hidden-area" style="display:none">
 	         </div>
