--- a/process-mining-web/src/main/webapp/resources/css/process/visualization.css
+++ b/process-mining-web/src/main/webapp/resources/css/process/visualization.css
@@ -362,12 +362,8 @@ ul.context-menu li a:hover {
 	 Subtitles        
  *******************************/
  .subtitle {
-    height: 26px;
-    background: #E8E8E8;
-    border: 1px solid #D2D2D2;
-    box-shadow: 0px -1px 1px #f0f0f0 inset;
+	margin: -5px;
     font-size: 12px;
-    opacity: 0.95;
 }
 
 .subtitle ul li {
@@ -405,24 +401,12 @@ ul.context-menu li a:hover {
 
 .subtitle label {
     position: relative;
-    float: left;
     margin: 0px;
     padding: 4px 0px 0px 6px;
     left: 0px;
     top: 0px;
     font-weight: 100;
     color: #676767;
-    text-shadow: 1px 1px 0px #EEE;
-}
-
-.subtitle .sub-divisor {
-    height: 16px;
-    float: left;
-    width: 1px;
-    border-right: 1px solid #f0f0f0;
-    border-left: 1px solid #A9A9A9;
-    margin-top: 3px;
-    margin-left: 4px;
 }
 
 .subtitle ul li .sub-actvity.sub-next {
