--- a/process-mining-web/src/main/resources/templates/home.html
+++ b/process-mining-web/src/main/resources/templates/home.html
@@ -16,20 +16,14 @@
 	
 		<div class="container" id="container-main">
 			<div class="jumbotron">
-				<h2>Ja imaginou minerar dados e produzir processos pela web?</h2>
-				<ul>
-					<li>Minere processos diretamente de onde estiver.</li>
-					<li>Sem precisar instalar softwares complexos.</li>
-				</ul>
-				<h3>Como funciona?</h3>
-				<img th:src="@{/img/home/company.png}" /> 
-				<img th:src="@{/img/home/process-data.png}" /> 
-				<img th:src="@{/img/home/process.png}" /> 
-				<img th:src="@{/img/home/value-generated.png}" />
-				
-				<svg width="200px" height="200px" viewBox="0 0 200 200">
-					<path fill="#496480" d="M156.852,80.245c-1.754,0-4.427,0.145-7.807,0.4c-1.394-15.501-14.414-27.651-30.277-27.651  c-5.798,0-11.216,1.623-15.826,4.438c-7.094-6.593-16.595-10.631-27.044-10.631c-21.951,0-39.743,17.794-39.743,39.746  c0,1.944,0.146,3.854,0.416,5.725c-15.862,1.082-28.397,14.285-28.397,30.425c0,16.846,13.657,30.503,30.503,30.503  c14.156,0,102.897,0,118.176,0c20.143,0,36.476-16.33,36.476-36.479C193.327,96.579,176.994,80.245,156.852,80.245z   "/>
-				</svg>
+				<h2> Know better your processes </h2>
+				<h4 class="second-title"> UNDERSTAND YOUR DATA AND DISCOVER WHERE TO <span>IMPROVE</span> ! </h4>
+				<img th:src="@{/img/home/mining-ico.png}" style="margin: 33px; width: 160px;"/>
+				<span style="font-size: 24px;"> Go deeper</span>
+			
+<!-- 				<svg width="200px" height="200px" viewBox="0 0 200 200"> -->
+<!-- 					<path fill="#496480" d="M156.852,80.245c-1.754,0-4.427,0.145-7.807,0.4c-1.394-15.501-14.414-27.651-30.277-27.651  c-5.798,0-11.216,1.623-15.826,4.438c-7.094-6.593-16.595-10.631-27.044-10.631c-21.951,0-39.743,17.794-39.743,39.746  c0,1.944,0.146,3.854,0.416,5.725c-15.862,1.082-28.397,14.285-28.397,30.425c0,16.846,13.657,30.503,30.503,30.503  c14.156,0,102.897,0,118.176,0c20.143,0,36.476-16.33,36.476-36.479C193.327,96.579,176.994,80.245,156.852,80.245z   "/> -->
+<!-- 				</svg> -->
 			</div>
 			<div class="jumbotron">
 				<form action="/upload" id="processDropzone" class="dropzone" enctype="multipart/form-data">
