Updated info to include in public site

--- a/process-mining-web/src/main/resources/templates/adjust.html
+++ b/process-mining-web/src/main/resources/templates/adjust.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-	<meta charset="utf-8" />
-	<title>Event log adjusts</title>
-	<link rel="stylesheet" th:href="@{/css/bootstrap.css}" />
-	<link rel="stylesheet" th:href="@{/css/all.css}" />
-	<link rel="stylesheet" th:href="@{/css/jquery-ui.accordion.min.css}" />
-	<link rel="stylesheet" th:href="@{/css/jquery.nouislider.min.css}" />
-	<link rel="stylesheet" th:href="@{/css/adjust.css}" />
-	<link rel="stylesheet" th:href="@{/css/jquery.dataTables.min.css}" />
-	
-	
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+<meta charset="utf-8" />
+<title>Event log adjusts</title>
+<link rel="stylesheet" th:href="@{/css/bootstrap.css}" />
+<link rel="stylesheet" th:href="@{/css/all.css}" />
+<link rel="stylesheet" th:href="@{/css/jquery-ui.accordion.min.css}" />
+<link rel="stylesheet" th:href="@{/css/jquery.nouislider.min.css}" />
+<link rel="stylesheet" th:href="@{/css/adjust.css}" />
+<link rel="stylesheet" th:href="@{/css/jquery.dataTables.min.css}" />
+
+
 </head>
 <body>
 	<span th:include="commun/header :: process-menu (active=1)"></span>
@@ -20,37 +20,27 @@
 	<div id="split-container">
 
 		<div id="doc-menus">
-		
-			<a class="btn btn-primary btn-lg btn-block disabled" href="#" id="process-data" role="button">0/4 variables selected</a>
-			<hr/>		 
-			<form id="accordion" >
-				
-			</form>
+
+			<a class="btn btn-primary btn-lg btn-block disabled" href="#"
+				id="process-data" role="button">0/4 variables selected</a>
+			<hr />
+			<form id="accordion"></form>
 
 		</div>
 
 
 	</div>
-	<div id="adjust-container"> 
-	<div style="
-    border-bottom: 1px solid #999;
-    position: relative;
-    background-color: white;
-">
-  
-  <input type="text" id="analysis-name" style="
-    width: 100%;
-    display: block;
-    border: 0px none;
-    font-size: 22px;
-    padding: 5px 11px;
-    box-sizing: inherit;
-    clear: both;
-    color: #666;
-    font-style: italic;
-" placeholder="Analysis title" th:value="${filename}" />
-</div>
+	<div id="adjust-container">
+		<div
+			style="border-bottom: 1px solid #999; position: relative; background-color: white;">
+
+			<input type="text" id="analysis-name"
+				style="width: 100%; display: block; border: 0px none; font-size: 22px; padding: 5px 11px; box-sizing: inherit; clear: both; color: #666; font-style: italic;"
+				placeholder="Analysis title" th:value="${filename}" />
+		</div>
 	</div>
+
+	<span th:include="commun/footer :: footer"></span>
 
 	<script th:src="@{/js/jquery-1.10.2.min.js}"></script>
 	<script th:src="@{/js/jquery.dataTables.min.js}"></script>
