--- a/process-mining-web/src/main/resources/templates/process/visualization.html
+++ b/process-mining-web/src/main/resources/templates/process/visualization.html
@@ -107,20 +107,15 @@
 						</div>
 						<div class="replay">
 						<span class="palette" title="YlOrRd" style="margin: 23px 42px;">
-							<span
-							style="float: left; margin-left: 40px; font-size: 12px; font-weight: bolder; text-align: center; line-height: 12px;">HIGHEST<span
-								style="display: block;"> avg time</span></span><span class="swatch"
-							style="background-color: rgb(189, 0, 38); width: 30px; height: 21px;"></span>
-							<span class="swatch"
-							style="background-color: rgb(227, 26, 28); width: 28px; height: 21px;"></span>
-							<span class="swatch"
-							style="background-color: rgb(252, 78, 42); width: 26px; height: 21px;"></span>
-							<span class="swatch"
-							style="background-color: rgb(253, 141, 60); width: 24px; height: 21px;"></span>
-							<span class="swatch"
-							style="background-color: rgb(254, 178, 76); width: 22px; height: 21px;"></span>
-							<span class="swatch"
-							style="background-color: rgb(254, 217, 118); width: 20px; height: 21px;"></span>
+							<span style="float: left; margin-left: 40px; font-size: 12px; font-weight: bolder; text-align: center; line-height: 12px;">HIGHEST
+								<span style="display: block;"> avg time</span>
+							</span>
+							<span class="swatch" style="background-color: rgb(189, 0, 38); width: 30px; height: 21px;"></span>
+							<span class="swatch" style="background-color: rgb(227, 26, 28); width: 28px; height: 21px;"></span>
+							<span class="swatch" style="background-color: rgb(252, 78, 42); width: 26px; height: 21px;"></span>
+							<span class="swatch" style="background-color: rgb(253, 141, 60); width: 24px; height: 21px;"></span>
+							<span class="swatch" style="background-color: rgb(254, 178, 76); width: 22px; height: 21px;"></span>
+							<span class="swatch" style="background-color: rgb(254, 217, 118); width: 20px; height: 21px;"></span>
 							<span
 							style="float: left; margin-left: 40px; font-size: 12px; font-weight: bolder; text-align: center; line-height: 12px;">LOWEST<span
 								style="display: block;"> avg time</span></span><span class="swatch"
@@ -154,6 +149,9 @@
             
         </div>
         
+
+		<span th:include="commun/footer :: footer"></span>
+	
         <script th:src="@{/js/jquery-1.10.2.min.js}"></script>
         <script th:src="@{/js/jquery.browser.min.js}"></script>
         <script th:src="@{/js/jquery.nouislider.min.js}"></script>
