--- a/process-mining-web/src/main/resources/templates/home.html
+++ b/process-mining-web/src/main/resources/templates/home.html
@@ -1,53 +1,82 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-		<meta charset="utf-8" />
-		<title>Database process documentation</title>
-		<link rel="stylesheet" th:href="@{/css/bootstrap.css}" />
-		<link rel="stylesheet" th:href="@{/css/all.css}" />
-		<link rel="stylesheet" th:href="@{/css/dropzone.css}" />
-		<link rel="stylesheet" th:href="@{/css/home.css}" />
-	
-	</head>
-	<body>
-		<span th:include="commun/header :: process-menu (isHome=true)"></span>
-	
-		<div class="container" id="container-main">
-			<div class="jumbotron">
-				<h2> Know better your processes </h2>
-				<h4 class="second-title"> UNDERSTAND YOUR DATA AND DISCOVER WHERE TO <span>IMPROVE</span> ! </h4>
-				<img th:src="@{/img/home/mining-ico.png}" style="margin: 33px; width: 160px;"/>
-				<span style="font-size: 24px;"> Go deeper</span>
-			
-<!-- 				<svg width="200px" height="200px" viewBox="0 0 200 200"> -->
-<!-- 					<path fill="#496480" d="M156.852,80.245c-1.754,0-4.427,0.145-7.807,0.4c-1.394-15.501-14.414-27.651-30.277-27.651  c-5.798,0-11.216,1.623-15.826,4.438c-7.094-6.593-16.595-10.631-27.044-10.631c-21.951,0-39.743,17.794-39.743,39.746  c0,1.944,0.146,3.854,0.416,5.725c-15.862,1.082-28.397,14.285-28.397,30.425c0,16.846,13.657,30.503,30.503,30.503  c14.156,0,102.897,0,118.176,0c20.143,0,36.476-16.33,36.476-36.479C193.327,96.579,176.994,80.245,156.852,80.245z   "/> -->
-<!-- 				</svg> -->
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+<meta charset="utf-8" />
+<title>Database process documentation</title>
+<link rel="stylesheet" th:href="@{/css/bootstrap.css}" />
+<link rel="stylesheet" th:href="@{/css/all.css}" />
+<link rel="stylesheet" th:href="@{/css/dropzone.css}" />
+<link rel="stylesheet" th:href="@{/css/home.css}" />
+
+</head>
+<body>
+	<span th:include="commun/header :: process-menu (isHome=true)"></span>
+
+	<div class="container" id="container-main">
+		<div class="jumbotron">
+			<h2>Know better your processes</h2>
+			<h4 class="second-title">
+				UNDERSTAND YOUR DATA AND DISCOVER HOW TO <span>IMPROVE</span> !
+			</h4>
+			<div class="row reduce">
+				<div class="col-md-3">
+					<img th:src="@{/img/home/upload.png}" />
+					<div>Upload your data</div>
+				</div>
+				<div class="col-md-3">
+					<img th:src="@{/img/home/adjust.png}" />
+					<div>Adjust it</div>
+				</div>
+				<div class="col-md-3">
+					<img th:src="@{/img/home/visualize.png}" />
+					<div>Visualize statistics</div>
+				</div>
+				<div class="col-md-3">
+					<img th:src="@{/img/home/replay.png}" />
+					<div>Replay the events</div>
+				</div>
 			</div>
-			<div class="jumbotron">
-				<form action="/upload" id="processDropzone" class="dropzone" enctype="multipart/form-data">
-				</form>
+			<img th:src="@{/img/home/mining-ico.png}"
+				style="margin: 33px; width: 160px;" /> <span
+				style="font-size: 24px;"> Go deeper</span>
+			<br/><br/>
+			<div style="line-height:20px" >
+			<a href="/resources/samples/running-example.csv" title="CSV sample" >Download a sample CSV data<br/> <span style="font-size:14px; color:#333">Rigth click and save as..</span></a>
 			</div>
-			
 		</div>
+		<div class="jumbotron">
+			<form action="/upload" id="processDropzone" class="dropzone"
+				enctype="multipart/form-data"></form>
 		
-		<div class="modal fade" role="dialog" id="myModal" >
-		  <div class="modal-dialog" role="document">
-		    <div class="modal-content">
-		      <div class="modal-body" style="padding: 35px;">
-				<img th:src="@{/img/home/adjusting-data.gif}" style="float:left"/> 
-				<h1 style="text-align:center;margin: 0;padding: 28px 0px;font-size: 32px;">Adjusting and validating your file.</h1>
-		      </div>
-		      
-		    </div><!-- /.modal-content -->
-		  </div><!-- /.modal-dialog -->
-		</div><!-- /.modal -->
-	
-		<script th:src="@{/js/jquery-1.10.2.min.js}"></script>
-		<script th:src="@{/js/bootstrap.min.js}"></script>
-		<script th:src="@{/js/home/dropzone.js}"></script>
-		<script th:src="@{/js/home/home.js}"></script>
-	
-	</body>
+		</div>
+
+	</div>
+
+	<div class="modal fade" role="dialog" id="myModal">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-body" style="padding: 35px;">
+					<img th:src="@{/img/home/adjusting-data.gif}" style="float: left" />
+					<h1
+						style="text-align: center; margin: 0; padding: 28px 0px; font-size: 32px;">Adjusting
+						and validating your file.</h1>
+				</div>
+
+			</div>
+			<!-- /.modal-content -->
+		</div>
+		<!-- /.modal-dialog -->
+	</div>
+	<!-- /.modal -->
+
+	<span th:include="commun/footer :: footer"></span>
+
+	<script th:src="@{/js/jquery-1.10.2.min.js}"></script>
+	<script th:src="@{/js/bootstrap.min.js}"></script>
+	<script th:src="@{/js/home/dropzone.js}"></script>
+	<script th:src="@{/js/home/home.js}"></script>
+
+</body>
 </html>
