Analytics and titles

--- a/process-mining-web/src/main/resources/templates/home.html
+++ b/process-mining-web/src/main/resources/templates/home.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 <meta charset="utf-8" />
-<title>Database process documentation</title>
+<title>Web Process Miner - Mine your process anywhere</title>
 <link rel="stylesheet" th:href="@{/css/bootstrap.css}" />
 <link rel="stylesheet" th:href="@{/css/all.css}" />
 <link rel="stylesheet" th:href="@{/css/dropzone.css}" />
@@ -43,7 +43,7 @@
 				style="font-size: 24px;"> Go deeper</span>
 			<br/><br/>
 			<div style="line-height:20px" >
-			<a href="/resources/samples/running-example.csv" title="CSV sample" >Download a sample CSV data<br/> <span style="font-size:14px; color:#333">Rigth click and save as..</span></a>
+				<a href="/resources/samples/wpm-pay-compensation-request.csv" title="CSV sample" >Download a sample CSV data<br/> <span style="font-size:14px; color:#333">Rigth click and save as..</span></a>
 			</div>
 		</div>
 		<div class="jumbotron">
