--- a/process-mining-web/src/main/resources/templates/commun/header.html
+++ b/process-mining-web/src/main/resources/templates/commun/header.html
@@ -6,6 +6,18 @@
 <body>
 
     <div th:fragment="process-menu" >
+         
+        <script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		
+		  ga('create', 'UA-68280124-1', 'auto');
+		  ga('send', 'pageview');
+		
+		</script>
+    
     	<div class="head-nav">
 	      	<div class="nav"><a href="#content">Ir para conteudo</a> 	</div>
 	    	<div th:class="'nav fixed ' + ${isHome == true ? 'home' : ''}">
