--- a/process-mining-web/src/main/resources/templates/info.html
+++ b/process-mining-web/src/main/resources/templates/info.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 <meta charset="utf-8" />
-<title>Database process documentation</title>
+<title>About me</title>
 <link rel="stylesheet" th:href="@{/css/bootstrap.css}" />
 <link rel="stylesheet" th:href="@{/css/all.css}" />
 <link rel="stylesheet" th:href="@{/css/info.css}" />
@@ -28,7 +28,6 @@
 			<div>
 				I will write more details of my work soon...
 			</div>
-
 		</div>
 		
 	</div>
