--- a/process-mining-web/src/main/resources/templates/process/visualization.html
+++ b/process-mining-web/src/main/resources/templates/process/visualization.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
         <meta charset="utf-8" />
-        <title>Database process documentation</title>
+        <title>Web process - Replay your log</title>
         <link rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
         <link rel="stylesheet" th:href="@{/css/all.css}"/>
         <link rel="stylesheet" th:href="@{/css/jquery-ui.accordion.min.css}"/>
