Updates for mongo 3 support

--- a/process-mining-web/src/main/resources/templates/home.html
+++ b/process-mining-web/src/main/resources/templates/home.html
@@ -43,7 +43,7 @@
 				style="font-size: 24px;"> Go deeper</span>
 			<br/><br/>
 			<div style="line-height:20px" >
-				<a href="/resources/samples/wpm-pay-compensation-request.csv" title="CSV sample" >Download a sample CSV data<br/> <span style="font-size:14px; color:#333">Rigth click and save as..</span></a>
+				<a th:href="@{/samples/wpm-pay-compensation-request.csv}" title="CSV sample" >Download a sample CSV data<br/> <span style="font-size:14px; color:#333">Rigth click and save as..</span></a>
 			</div>
 		</div>
 		<div class="jumbotron">
